--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,16 +15,16 @@ services:
       sh -c "swagger-cli bundle ./openapi/openapi.yaml -o ./openapi/bundled-openapi.yaml &&
              echo 'OpenAPI 번들링 완료'"
 
-  # Swagger UI 서비스
+  # ReDoc 서비스
   # API 문서를 시각적 인터페이스로 표시
-  swagger-ui:
-    image: swaggerapi/swagger-ui
+  redoc:
+    image: redocly/redoc
     ports:
-      - "8080:8080"
+      - "8080:80"
     volumes:
       - ./api/openapi:/usr/share/nginx/html/openapi
     environment:
-      - SWAGGER_JSON=/usr/share/nginx/html/openapi/bundled-openapi.yaml # 번들링된 파일 지정
+      - SPEC_URL=/openapi/bundled-openapi.yaml # 번들링된 파일 지정
     depends_on:
-      openapi-bundler:  # 번들링 서비스가 완료된 후 실행
+      openapi-bundler: # 번들링 서비스가 완료된 후 실행
         condition: service_completed_successfully
