SecuritySchemes 적용 안되는 문제 해결
- 번들링시 역참조(Dereferencing) 제거
	`securitySchemes`는 최상위 레벨에 있는데, 역참조 과정에서 이 구조적 의미가 사라지는 것으로 추정

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - ./api/openapi:/app/openapi
     working_dir: /app
     command: >
-      sh -c "redocly bundle ./openapi/openapi.yaml --output ./openapi/bundled-openapi.yaml --dereferenced &&
+      sh -c "redocly bundle ./openapi/openapi.yaml --output ./openapi/bundled-openapi.yaml &&
             echo 'Redocly 번들링 완료'"
 
   # ReDoc 서비스
