회원가입 엔드포인트 인증 제거

--- a/api/openapi/user/feature/register.yaml
+++ b/api/openapi/user/feature/register.yaml
@@ -6,6 +6,7 @@ Path:
     summary: 회원가입
     description: 새로운 사용자 계정을 생성합니다
     operationId: registerUser
+    security: []
     requestBody:
       required: true
       content:
