--- a/api/openapi/auth/session/resource.yaml
+++ b/api/openapi/auth/session/resource.yaml
@@ -1,22 +1,22 @@
-Response:
+Resource:
   type: object
   properties:
     data:
       type: object
       properties:
         type:
-          $ref: './type.yaml#/Type'
+          $ref: '../type.yaml#/Type'
         id:
-          $ref: './session/attributes.yaml#/SessionId'
+          $ref: './attributes.yaml#/SessionId'
         attributes:
           type: object
           properties:
             expiresAt:
-              $ref: './session/attributes.yaml#/ExpiresAt'
+              $ref: './attributes.yaml#/ExpiresAt'
         relationships:
-          $ref: '../user/relationship.yaml#/User'
+          $ref: '../../user/relationship.yaml#/User'
     meta:
       type: object
       properties:
         headerName:
-          $ref: './metas.yaml#/HeaderName'
+          $ref: '../metas.yaml#/HeaderName'
