--- a/api/openapi/auth/feature/logout.yaml
+++ b/api/openapi/auth/feature/logout.yaml
@@ -1,29 +1,28 @@
-Path:
-  post:
-    tag:
-      - 인증 API
-    summary: 로그아웃
-    description: |
-      현재 세션을 종료하고 인증 상태를 해제합니다.
-      
-      보안 고려사항:
-      - 유효한 세션이 없거나 이미 만료된 세션이더라도 항상 204(성공) 응답을 반환합니다.
-      - 이는 세션 상태에 관한 정보를 외부에 노출하지 않아 열거 공격(enumeration attack)을 방지하기 위한 설계입니다.
-      
-      클라이언트는 로그아웃 요청이 항상 성공했다고 간주하고, 로컬 상태를 정리해야 합니다.
-      *열거 공격(enumeration attack) 방지: 401 오류를 반환하면 "유효한 세션이 있었다"는 정보를 간접적으로 알려줄 수 있습니다
-    operationId: logout
-    security:
-        - AuthSession: [ ]
-    requestBody:
-      required: true
-      content:
-        application/vnd.api+json:
-          schema:
-            $ref: '#/Request'
-    responses:
-      '204':
-        description: 로그아웃 성공 (세션이 이미 없거나 유효하지 않은 경우에도 동일한 응답)
+Post:
+  tag:
+    - 인증 API
+  summary: 로그아웃
+  description: |
+    현재 세션을 종료하고 인증 상태를 해제합니다.
+    
+    보안 고려사항:
+    - 유효한 세션이 없거나 이미 만료된 세션이더라도 항상 204(성공) 응답을 반환합니다.
+    - 이는 세션 상태에 관한 정보를 외부에 노출하지 않아 열거 공격(enumeration attack)을 방지하기 위한 설계입니다.
+    
+    클라이언트는 로그아웃 요청이 항상 성공했다고 간주하고, 로컬 상태를 정리해야 합니다.
+    *열거 공격(enumeration attack) 방지: 401 오류를 반환하면 "유효한 세션이 있었다"는 정보를 간접적으로 알려줄 수 있습니다
+  operationId: logout
+  security:
+      - AuthSession: [ ]
+  requestBody:
+    required: true
+    content:
+      application/vnd.api+json:
+        schema:
+          $ref: '#/Request'
+  responses:
+    '204':
+      description: 로그아웃 성공 (세션이 이미 없거나 유효하지 않은 경우에도 동일한 응답)
 
 Request:
   type: object
