OpenAPI 유저 정보 업데이트 엔드포인트 명세 추가

--- a/api/openapi/user/feature/register.yaml
+++ b/api/openapi/user/feature/register.yaml
@@ -1,7 +1,7 @@
 # 사용자 등록
 Post:
   tags:
-    - 유저 API
+    - 사용자 API
   summary: 회원가입
   description: 새로운 사용자 계정을 생성합니다
   operationId: registerUser
