--- a/api/openapi/error/types.yaml
+++ b/api/openapi/error/types.yaml
@@ -86,3 +86,41 @@ InvalidCredentialsError:
     title: 인증 실패
     status: 401
     detail: "아이디 또는 비밀번호가 올바르지 않습니다"
+
+# 권한 부족으로 인한 403 Forbidden 응답을 위한 오류 스키마
+ForbiddenError:
+  type: object
+  description: |
+    요청한 작업을 수행할 권한이 없는 경우 발생하는 오류입니다.
+    주로 자신의 리소스만 수정할 수 있는 경우나, 특정 역할(예: 스터디장)만 
+    접근 가능한 기능에 접근 시도할 때 발생합니다.
+  properties:
+    type:
+      $ref: './schemas.yaml#/Type'
+    title:
+      $ref: './schemas.yaml#/Title'
+    status:
+      $ref: './schemas.yaml#/Status'
+  example:
+    type: "about:blank"
+    title: "접근 권한 없음"
+    status: 403
+
+# 리소스를 찾을 수 없는 404 Not Found 응답을 위한 오류 스키마
+NotFoundError:
+  type: object
+  description: |
+    요청한 리소스를 찾을 수 없는 경우 발생하는 오류입니다.
+    존재하지 않는 ID로 리소스 조회를 시도하거나, 삭제된 리소스에 
+    접근하려고 할 때 발생합니다.
+  properties:
+    type:
+      $ref: './schemas.yaml#/Type'
+    title:
+      $ref: './schemas.yaml#/Title'
+    status:
+      $ref: './schemas.yaml#/Status'
+  example:
+    type: "about:blank"
+    title: "리소스를 찾을 수 없음"
+    status: 404
