Open API 태그 영어로 수정
- 한글로 태그명을 작성할 시, Redoc 문서에서 태그 클릭 버그 존재

--- a/api/openapi/user/feature/update.yaml
+++ b/api/openapi/user/feature/update.yaml
@@ -1,7 +1,7 @@
 # 사용자 정보 업데이트
 Patch:
   tags:
-    - 사용자 API
+    - User API
   summary: 사용자 정보 업데이트
   description: |
     로그인한 사용자의 프로필 정보를 업데이트합니다.
