--- a/api/openapi/user/feature/search.yaml
+++ b/api/openapi/user/feature/search.yaml
@@ -1,6 +1,6 @@
 Get:
   tags:
-    - 사용자 API
+    - User API
   summary: 사용자 검색 (loginId/nickname만 가능)
   description: |
     loginId 또는 nickname으로 사용자를 검색합니다.
