--- a/api/openapi/error/types.yaml
+++ b/api/openapi/error/types.yaml
@@ -148,3 +148,32 @@ NotFoundError:
     type: "about:blank"
     title: "리소스를 찾을 수 없음"
     status: 404
+
+# 파일 크기 초과 오류 (413 Payload Too Large)
+FileSizeTooLargeError:
+  type: object
+  description: |
+    업로드된 파일이 허용된 최대 크기를 초과할 때 발생하는 오류입니다.
+    주로 이미지나 첨부 파일 업로드 시 사용됩니다.
+  properties:
+    type:
+      $ref: './schemas.yaml#/Type'
+    title:
+      $ref: './schemas.yaml#/Title'
+    status:
+      $ref: './schemas.yaml#/Status'
+    detail:
+      $ref: './schemas.yaml#/Detail'
+    maxAllowedSize:
+      type: integer
+      description: 허용된 최대 파일 크기 (바이트 단위)
+    actualSize:
+      type: integer
+      description: 업로드 시도된 파일의 실제 크기 (바이트 단위)
+  example:
+    type: "https://example.com/probs/file-size-too-large"
+    title: "파일 크기 초과"
+    status: 413
+    detail: "업로드된 파일이 허용된 최대 크기 (10MB)를 초과했습니다"
+    maxAllowedSize: 10485760
+    actualSize: 15728640
