user-relationship 필드명을 참조하는 곳에서 직접 선언하도록 변경

--- a/api/openapi/auth/session/resource.yaml
+++ b/api/openapi/auth/session/resource.yaml
@@ -14,7 +14,10 @@ Resource:
             expiresAt:
               $ref: './attributes.yaml#/ExpiresAt'
         relationships:
-          $ref: '../../user/relationship.yaml#/User'
+            type: object
+            properties:
+              user:
+                $ref: '../../user/relationship.yaml#/User'
     meta:
       type: object
       properties:
