--- a/api/openapi/study-notice/feature/create.yaml
+++ b/api/openapi/study-notice/feature/create.yaml
@@ -36,7 +36,7 @@ Post:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '#/Response'
     '400':
       description: 유효하지 않은 입력값
       content:
@@ -104,3 +104,9 @@ Request:
   required:
     - data
   additionalProperties: false
+
+Response:
+  type: object
+  properties:
+    data:
+      $ref: '../resource.yaml#/Resource'
