--- a/api/openapi/study-notice/feature/get.yaml
+++ b/api/openapi/study-notice/feature/get.yaml
@@ -24,10 +24,16 @@ Get:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '#/Response'
     '404':
       description: 스터디 그룹 또는 공지사항을 찾을 수 없음
       content:
         application/problem+json:
           schema:
             $ref: '../../error/types.yaml#/NotFoundError'
+
+Response:
+  type: object
+  properties:
+    data:
+      $ref: '../resource.yaml#/Resource'
