스터디 공지사항의 isPinned 속성을 메타로 분리
- pin 유무는 공지사항의 속성보다는 공지사항 컨텍스트 영역

--- a/api/openapi/jsonapi/responses.yaml
+++ b/api/openapi/jsonapi/responses.yaml
@@ -54,9 +54,9 @@ RelationshipResponse:
             $ref: '#/ResourceIdentifier'
         - type: 'null'
     meta:
-      $ref: '#/Meta'
+      $ref: './schemas.yaml#/Meta'
     links:
-      $ref: '#/Links'
+      $ref: './schemas.yaml#/Links'
   oneOf:
     - required: [ 'data' ]
     - required: [ 'meta' ]
