study-group resource 스키마에서 data 필드 제거
- 엔드포인트 Repsonse에서 정의하도록 변경
- single resource, multi resources 표현할 때, 모두 resource 스키마를 사용할 수 있게 수정

--- a/api/openapi/study-group/feature/create.yaml
+++ b/api/openapi/study-group/feature/create.yaml
@@ -29,7 +29,7 @@ Post:
       content:
         application/vnd.api+json:
           schema:
-            $ref: '../resource.yaml#/Resource'
+            $ref: '#/Response'
     '400':
       description: 유효하지 않은 입력값
       content:
@@ -97,3 +97,9 @@ Request:
   required:
     - data
   additionalProperties: false
+
+Response:
+  type: object
+  properties:
+    data:
+      $ref: '../resource.yaml#/Resource'
