--- a/api/openapi/study-group/feature/list.yaml
+++ b/api/openapi/study-group/feature/list.yaml
@@ -58,24 +58,7 @@ Response:
       items:
         $ref: '../resource.yaml#/Resource'
     meta:
-      type: object
-      properties:
-        totalItems:
-          type: integer
-          description: 전체 스터디 그룹 수
-          example: 42
-        totalPages:
-          type: integer
-          description: 전체 페이지 수
-          example: 3
-        currentPage:
-          type: integer
-          description: 현재 페이지 번호
-          example: 1
-        itemsPerPage:
-          type: integer
-          description: 페이지당 아이템 수
-          example: 20
+      $ref: '../../jsonapi/pagination-meta.yaml#/PaginationMeta'
     links:
       type: object
       properties:
