--- a/api/openapi/study-announcement/feature/close.yaml
+++ b/api/openapi/study-announcement/feature/close.yaml
@@ -14,12 +14,6 @@ Post:
     - 처리되지 않은 지원자(검토중, 제출됨 상태)가 있는 경우 마감할 수 없습니다
   operationId: closeStudyAnnouncement
   parameters:
-    - name: studyGroupId
-      in: path
-      required: true
-      description: 공고가 속한 스터디 그룹의 고유 식별자
-      schema:
-        type: string
     - name: announcementId
       in: path
       required: true
@@ -52,7 +46,7 @@ Post:
           schema:
             $ref: '../../error/types.yaml#/ForbiddenError'
     '404':
-      description: 스터디 그룹 또는 공고를 찾을 수 없음
+      description: 공고를 찾을 수 없음
       content:
         application/problem+json:
           schema:
