--- a/api/openapi/study-announcement/feature/delete.yaml
+++ b/api/openapi/study-announcement/feature/delete.yaml
@@ -9,12 +9,6 @@ Delete:
     - 지원자가 한 명도 없는 공고만 삭제할 수 있습니다 (상태와 무관)
   operationId: deleteStudyAnnouncement
   parameters:
-    - name: studyGroupId
-      in: path
-      required: true
-      description: 공고가 속한 스터디 그룹의 고유 식별자
-      schema:
-        type: string
     - name: announcementId
       in: path
       required: true
@@ -41,7 +35,7 @@ Delete:
           schema:
             $ref: '../../error/types.yaml#/ForbiddenError'
     '404':
-      description: 스터디 그룹 또는 공고를 찾을 수 없음
+      description: 공고를 찾을 수 없음
       content:
         application/problem+json:
           schema:
