--- a/api/openapi/study-announcement/feature/get.yaml
+++ b/api/openapi/study-announcement/feature/get.yaml
@@ -9,12 +9,6 @@ Get:
   operationId: getStudyAnnouncement
   security: []
   parameters:
-    - name: studyGroupId
-      in: path
-      required: true
-      description: 공고가 속한 스터디 그룹의 고유 식별자
-      schema:
-        type: string
     - name: announcementId
       in: path
       required: true
@@ -36,7 +30,7 @@ Get:
           schema:
             $ref: '#/Response'
     '404':
-      description: 스터디 그룹 또는 공고를 찾을 수 없음
+      description: 공고를 찾을 수 없음
       content:
         application/problem+json:
           schema:
