--- a/api/openapi/study-announcement/feature/update.yaml
+++ b/api/openapi/study-announcement/feature/update.yaml
@@ -12,12 +12,6 @@ Patch:
     - 모집 인원을 줄일 경우, 현재 승인된 지원자 수보다 적게 설정할 수 없습니다
   operationId: updateStudyAnnouncement
   parameters:
-    - name: studyGroupId
-      in: path
-      required: true
-      description: 공고가 속한 스터디 그룹의 고유 식별자
-      schema:
-        type: string
     - name: announcementId
       in: path
       required: true
@@ -56,7 +50,7 @@ Patch:
           schema:
             $ref: '../../error/types.yaml#/ForbiddenError'
     '404':
-      description: 스터디 그룹 또는 공고를 찾을 수 없음
+      description: 공고를 찾을 수 없음
       content:
         application/problem+json:
           schema:
