--- a/api/openapi/study-announcement/feature/create.yaml
+++ b/api/openapi/study-announcement/feature/create.yaml
@@ -110,8 +110,8 @@ Request:
               $ref: '../attribute.yaml#/StartDateTime'
             endDateTime:
               $ref: '../attribute.yaml#/EndDateTime'
-            applicationFormId:
-              $ref: '../attribute.yaml#/ApplicationFormId'
+            applicationFormContent:
+              $ref: '../attribute.yaml#/ApplicationFormContent'
           required:
             - studyGroupId
             - title
