--- a/api/openapi/study-application/feature/list-announcement.yaml
+++ b/api/openapi/study-application/feature/list-announcement.yaml
@@ -1,19 +1,18 @@
 Get:
   tags:
     - Study Application API
-  summary: 내 스터디 신청서 목록 조회
+  summary: 특정 공고의 신청서 목록 조회
   description: |
-    현재 로그인한 사용자가 제출한 스터디 신청서 목록을 페이지네이션 방식으로 조회합니다.
+    특정 스터디 모집 공고에 제출된 신청서 목록을 페이지네이션 방식으로 조회합니다.
     
-    - 사용자는 자신이 제출한 신청서만 조회할 수 있습니다
-    - 필터를 통해 공고별, 상태별 신청서를 조회할 수 있습니다
-  operationId: listMyApplications
+    - 해당 공고가 속한 스터디의 스터디장만 조회할 수 있습니다
+    - 필터를 통해 상태별로 신청서를 필터링할 수 있습니다
+  operationId: listAnnouncementApplications
   parameters:
-    - name: filter[announcementId]
-      in: query
-      required: false
-      description: |
-        특정 공고에 대한 내 신청서만 조회합니다.
+    - name: announcementId
+      in: path
+      required: true
+      description: 신청서를 조회할 공고의 고유 식별자
       schema:
         type: string
     - name: filter[status]
@@ -44,7 +43,7 @@ Get:
       description: 포함할 관련 리소스 (쉼표로 구분)
       schema:
         type: string
-        enum: [announcement, reviewer]
+        enum: [applicant, reviewer]
   responses:
     '200':
       description: 신청서 목록 조회 성공
@@ -64,6 +63,18 @@ Get:
         application/problem+json:
           schema:
             $ref: '../../error/types.yaml#/UnauthenticatedError'
+    '403':
+      description: 권한 없음 (스터디장이 아닌 경우)
+      content:
+        application/problem+json:
+          schema:
+            $ref: '../../error/types.yaml#/ForbiddenError'
+    '404':
+      description: 공고를 찾을 수 없음
+      content:
+        application/problem+json:
+          schema:
+            $ref: '../../error/types.yaml#/NotFoundError'
 
 Response:
   type: object
@@ -82,12 +93,12 @@ Response:
           type: string
           format: uri
           description: 현재 페이지 링크
-          example: "/api/v1/my/applications?page[number]=1&page[size]=20"
+          example: "/api/v1/announcements/456/applications?page[number]=1&page[size]=20"
         first:
           type: string
           format: uri
           description: 첫 번째 페이지 링크
-          example: "/api/v1/my/applications?page[number]=1&page[size]=20"
+          example: "/api/v1/announcements/456/applications?page[number]=1&page[size]=20"
         prev:
           type: string
           format: uri
@@ -98,17 +109,16 @@ Response:
           type: string
           format: uri
           description: 다음 페이지 링크 (마지막 페이지인 경우 null)
-          example: "/api/v1/my/applications?page[number]=2&page[size]=20"
+          example: "/api/v1/announcements/456/applications?page[number]=2&page[size]=20"
           nullable: true
         last:
           type: string
           format: uri
           description: 마지막 페이지 링크
-          example: "/api/v1/my/applications?page[number]=3&page[size]=20"
+          example: "/api/v1/announcements/456/applications?page[number]=3&page[size]=20"
     included:
       type: array
       description: 포함된 관련 리소스 (include 파라미터에 지정된 경우)
       items:
         oneOf:
-          - $ref: '../../study-announcement/resource.yaml#/Resource'
           - $ref: '../../user/resource.yaml#/PublicResource'
