--- a/api/openapi/notice-pin/feature/pin.yaml
+++ b/api/openapi/notice-pin/feature/pin.yaml
@@ -1,16 +1,13 @@
-Put:
+Post:
   tags:
     - Study Notice API
   summary: 공지사항 고정
   description: |
     특정 공지사항을 스터디의 상단에 고정합니다.
     
-    비즈니스 규칙:
     - 스터디장만 공지사항을 고정할 수 있습니다
     - 스터디당 최대 3개의 공지사항만 고정 가능합니다
-    - 이미 3개의 공지사항이 고정된 상태에서 새로 고정하려면
-      기존 고정된 공지사항 중 하나를 먼저 해제해야 합니다
-    - 이미 고정된 공지사항에 대한 고정 요청은 해당 고정 정보를 반환합니다 (200 응답)
+    - 이미 3개의 공지사항이 고정된 상태에서 새로 고정하려면 기존 고정된 공지사항 중 하나를 먼저 해제해야 합니다
     - 가장 마지막 순서에 추가됩니다
   operationId: pinNotice
   parameters:
@@ -27,11 +24,11 @@ Put:
         schema:
           $ref: '#/Request'
   responses:
-    '200':
+    '201':
       description: |
         공지사항 고정 성공
         
-        공지사항이 성공적으로 고정되었습니다(처음 고정하는 경우와 이미 고정된 경우 모두).
+        공지사항이 성공적으로 고정되었습니다.
         응답에는 현재 고정 상태에 대한 상세 정보가 포함됩니다.
       content:
         application/vnd.api+json:
@@ -67,18 +64,33 @@ Put:
           schema:
             $ref: '../../error/types.yaml#/NotFoundError'
     '409':
-      description: 상태 충돌 (이미 최대 개수의 공지사항이 고정됨)
+      description: |
+        상태 충돌 (이미 고정된 공지사항이거나 최대 개수 초과)
+        
+        다음과 같은 경우에 이 응답이 반환됩니다:
+        - 이미 고정된 공지사항을 다시 고정하려고 할 때
+        - 이미 최대 개수(3개)의 공지사항이 고정되어 있을 때
       content:
         application/problem+json:
           schema:
             $ref: '../../error/types.yaml#/ConflictError'
-          example:
-            type: "about:blank"
-            title: "리소스 충돌"
-            status: 409
-            detail: "최대 3개의 공지사항만 고정할 수 있습니다. 기존 고정된 공지사항을 해제한 후 다시 시도해주세요."
-            conflictField: "pinCount"
-            resourceType: "pinned-notice"
+          examples:
+            alreadyPinned:
+              value:
+                type: "about:blank"
+                title: "리소스 충돌"
+                status: 409
+                detail: "이 공지사항은 이미 고정되어 있습니다"
+                conflictField: "noticeId"
+                resourceType: "pinned-notice"
+            maxPinsReached:
+              value:
+                type: "about:blank"
+                title: "리소스 충돌"
+                status: 409
+                detail: "최대 3개의 공지사항만 고정할 수 있습니다. 기존 고정된 공지사항을 해제한 후 다시 시도해주세요."
+                conflictField: "pinCount"
+                resourceType: "pinned-notice"
 
 Request:
   type: object
