--- a/api/openapi/study-group/feature/my-study-groups.yaml
+++ b/api/openapi/study-group/feature/my-study-groups.yaml
@@ -49,7 +49,10 @@ Get:
     - name: include
       in: query
       required: false
-      description: 포함할 관련 리소스 (쉼표로 구분)
+      description: |
+        포함할 관련 리소스 (쉼표로 구분).  
+        **leaderMembership.user를 포함하려면 반드시 leaderMembership도 함께 포함해야 합니다**.  
+        허용값: leaderMembership, leaderMembership.user, myMembership
       schema:
         type: string
         enum: [ leaderMembership, leaderMembership.user, myMembership ]
