notice-pin 리소스 속성에 있는 다른 리소스 id를 관계로 표현
- JSON:API 명세 준수

--- a/api/openapi/notice-pin/resource.yaml
+++ b/api/openapi/notice-pin/resource.yaml
@@ -1,17 +1,15 @@
 Resource:
   type: object
-  allOf:
-    - $ref: './identifier.yaml#/Identifier'
   properties:
+    type:
+      $ref: './identifier.yaml#/Type'
+    id:
+      $ref: './identifier.yaml#/NoticePinId'
     attributes:
       type: object
       properties:
-        noticeId:
-          $ref: './attribute.yaml#/NoticeId'
         pinnedAt:
           $ref: './attribute.yaml#/PinnedAt'
-        pinnedBy:
-          $ref: './attribute.yaml#/PinnedBy'
         order:
           $ref: './attribute.yaml#/Order'
     relationships:
