--- a/api/openapi/notice-pin/feature/pin.yaml
+++ b/api/openapi/notice-pin/feature/pin.yaml
@@ -1,14 +1,12 @@
-Post:
+Put:
   tags:
     - Study Notice API
   summary: 공지사항 고정
   description: |
     특정 공지사항을 스터디의 상단에 고정합니다.
     
-    - 스터디장만 공지사항을 고정할 수 있습니다
-    - 스터디당 최대 3개의 공지사항만 고정 가능합니다
-    - 이미 3개의 공지사항이 고정된 상태에서 새로 고정하려면 기존 고정된 공지사항 중 하나를 먼저 해제해야 합니다
-    - 가장 마지막 순서에 추가됩니다
+    멱등한 작업으로 같은 요청을 여러 번 수행해도 결과는 동일합니다.
+    서버가 자동으로 설정하는 속성(order, pinnedAt, pinnedBy)은 요청에 포함하지 않습니다.
   operationId: pinNotice
   parameters:
     - name: studyGroupId
@@ -17,19 +15,16 @@ Post:
       description: 공지사항이 속한 스터디 그룹의 고유 식별자
       schema:
         type: string
-  requestBody:
-    required: true
-    content:
-      application/vnd.api+json:
-        schema:
-          $ref: '#/Request'
+    - name: noticeId
+      in: path
+      required: true
+      description: 고정할 공지사항의 고유 식별자
+      schema:
+        type: string
+  # 요청 본문 없음 (모든 속성이 서버에서 자동 설정)
   responses:
-    '201':
-      description: |
-        공지사항 고정 성공
-        
-        공지사항이 성공적으로 고정되었습니다.
-        응답에는 현재 고정 상태에 대한 상세 정보가 포함됩니다.
+    '200':
+      description: 공지사항 고정 성공
       content:
         application/vnd.api+json:
           schema:
@@ -91,27 +86,6 @@ Post:
                 detail: "최대 3개의 공지사항만 고정할 수 있습니다. 기존 고정된 공지사항을 해제한 후 다시 시도해주세요."
                 conflictField: "pinCount"
                 resourceType: "pinned-notice"
-
-Request:
-  type: object
-  properties:
-    data:
-      type: object
-      properties:
-        type:
-          $ref: '../identifier.yaml#/Type'
-        attributes:
-          type: object
-          properties:
-            noticeId:
-              $ref: '../../study-notice/identifier.yaml#/NoticeId'
-          required:
-            - noticeId
-      required:
-        - type
-        - attributes
-  required:
-    - data
 
 Response:
   type: object
